--- a/generate/index.html
+++ b/generate/index.html
@@ -108,7 +108,7 @@
                                 <label for="randomSeed">Случайный сид</label>
                             </div>
                             <label for="seed">Сид (seed):</label>
-                            <input type="number" id="seed" value="-1" disabled>
+                            <input type="number" id="seed" value="" disabled>
                         </div>
                     </div>
 
@@ -160,4 +160,5 @@
     <script src="script.js"></script>
     <script src="../script.js"></script>
 </body>
+
 </html>
