--- a/generate/index.html
+++ b/generate/index.html
@@ -93,6 +93,16 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="clipSkip">Clip Skip:</label>
+                            <input type="number" id="clipSkip" value="1" min="1" max="12">
+                        </div>
+                        
+                        <div class="form-group">
+                            <label for="denoise">Denoise:</label>
+                            <input type="number" id="denoise" value="1.0" step="0.01" min="0" max="1">
+                        </div>
+
+                        <div class="form-group">
                             <label for="samplerSelect">Сэмплер:</label>
                             <select id="samplerSelect"></select>
                         </div>
@@ -162,3 +172,4 @@
 </body>
 
 </html>
+
