--- a/upscale/index.html
+++ b/upscale/index.html
@@ -96,7 +96,7 @@
                 
                 <div id="historySection" class="card hidden fade-in">
                     <div style="position: relative;">
-                        <h1>Upscale History</h1>
+                        <h1>History</h1>
                         <button id="clearHistoryBtn" class="history-clear-btn" title="Clear History">&times;</button>
                     </div>
                     <div id="historyList" class="history-grid"></div>
@@ -122,3 +122,4 @@
     <script src="../script.js"></script>
 </body>
 </html>
+
