--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,9 @@
                 <span>ComfyUI</span>
             </a>
             <nav class="nav">
-                <a href="" class="nav-link-selected">Главная</a>
-                <a href="generate/" class="nav-link">Генерация</a>
-                <a href="upscale/" class="nav-link">Улучшение</a>
+                <a href="" class="nav-link-selected">Home</a>
+                <a href="generate/" class="nav-link">Generate</a>
+                <a href="upscale/" class="nav-link">Upscale</a>
             </nav>
         </div>
     </header>
@@ -25,26 +25,26 @@
     <main class="main">
         <div class="container">
             <div class="banner">
-                <h2>Интерфейс для работы с ComfyUI</h2>
-                <p>Визуальный фронтенд для управления процессами генерации и апскейла изображений через ComfyUI API</p>
+                <h2>Interface for working with ComfyUI</h2>
+                <p>Visual frontend for managing image generation and upscaling processes through ComfyUI API</p>
             </div>
 
             <a href="generate/" class="action-card">
                 <div class="action-icon">🎨</div>
-                <h2>Генерация изображений</h2>
-                <p>Создавайте уникальные изображения с помощью искусственного интеллекта.<br>Настройте параметры и получите результат в высоком качестве.</p>
+                <h2>Image Generation</h2>
+                <p>Create unique images using artificial intelligence.<br>Configure parameters and get high-quality results.</p>
             </a>
             <a href="upscale/" class="action-card">
                 <div class="action-icon">🔍</div>
-                <h2>Улучшение изображений</h2>
-                <p>Увеличивайте разрешение ваших изображений без потери качества.<br>Используйте передовые алгоритмы для улучшения детализации.</p>
+                <h2>Image Enhancement</h2>
+                <p>Increase the resolution of your images without quality loss.<br>Use advanced algorithms to improve detail.</p>
             </a>
         </div>
     </main>
 
     <footer class="footer">
         <p>&copy; 2025 GKOZ</p>
-        <p class="disclaimer">Этот сайт является фронтенд-интерфейсом для работы с API ComfyUI и не связан с официальными разработчиками ComfyUI.<br>Все права на исходную технологию принадлежат их правообладателям.</p>
+        <p class="disclaimer">This site is a frontend interface for working with ComfyUI API and is not affiliated with the official ComfyUI developers.<br>All rights to the original technology belong to their respective owners.</p>
     </footer>
 </body>
 </html>
