--- a/generate/index.html
+++ b/generate/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div>
                 <div class="card fade-in">
-                    <h1>Generation</h1>
+                    <h1>Generate</h1>
                     <p>Interface for generating images through ComfyUI API.<br>Connect to your server and generate images.</p>
 
                     <div class="form-group">
@@ -171,3 +171,4 @@
     <script src="../script.js"></script>
 </body>
 </html>
+
